--- a/ThinkWhat/Modules/Controllers/Common/Banner/Content/Claim/ClaimSelection.xib
+++ b/ThinkWhat/Modules/Controllers/Common/Banner/Content/Claim/ClaimSelection.xib
@@ -42,13 +42,13 @@
                         <action selector="btnTapped:" destination="-1" eventType="touchUpInside" id="d9g-Ml-BiV"/>
                     </connections>
                 </button>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="g2f-n8-7xD">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="g2f-n8-7xD">
                     <rect key="frame" x="8" y="91" width="284" height="319.5"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DdD-fd-r93">
-                    <rect key="frame" x="123" y="477" width="54" height="15"/>
+                    <rect key="frame" x="122.5" y="477" width="55" height="15"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="15" id="2ma-vH-SWJ"/>
                     </constraints>
