--- a/ThinkWhat/Modules/Controllers/App/Hot/Card/Large/LargeCard.xib
+++ b/ThinkWhat/Modules/Controllers/App/Hot/Card/Large/LargeCard.xib
@@ -27,6 +27,7 @@
                 <outlet property="reject" destination="J1C-Cz-wfV" id="rwa-Nf-9fn"/>
                 <outlet property="slide" destination="FW8-mc-eXC" id="07A-u0-IKc"/>
                 <outlet property="titleLabel" destination="uK9-G7-Ti8" id="eLm-75-xGq"/>
+                <outlet property="topContainer" destination="Bt3-3d-rUl" id="T4h-w0-hpt"/>
                 <outlet property="topicIcon" destination="JbL-3d-P69" id="auq-F1-ymV"/>
                 <outlet property="topicSubtitle" destination="Rjf-95-T6c" id="awN-v0-geK"/>
                 <outlet property="topicTitle" destination="Sum-RL-ikc" id="NAL-eH-QVS"/>
@@ -80,31 +81,31 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FW8-mc-eXC" customClass="CircularIndicatorImageView" customModule="ThinkWhat" customModuleProvider="target">
-                            <rect key="frame" x="16" y="344.5" width="368" height="207"/>
+                            <rect key="frame" x="16" y="349" width="368" height="207"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="FW8-mc-eXC" secondAttribute="height" multiplier="16:9" id="ToB-jG-y3O"/>
+                                <constraint firstAttribute="width" secondItem="FW8-mc-eXC" secondAttribute="height" multiplier="16:9" identifier="aspectRatio" id="ToB-jG-y3O"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label Label Label Label Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qoF-e2-kgu">
-                            <rect key="frame" x="16" y="267.5" width="368" height="61"/>
+                            <rect key="frame" x="16" y="259.5" width="368" height="81.5"/>
                             <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="30"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.up.backward.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Q8W-75-Vda">
-                            <rect key="frame" x="167" y="568" width="66" height="65.5"/>
+                            <rect key="frame" x="165" y="564.5" width="70" height="69"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="Q8W-75-Vda" secondAttribute="height" multiplier="1:1" id="1vY-aA-I0J"/>
                             </constraints>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hand.thumbsdown.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="J1C-Cz-wfV">
-                            <rect key="frame" x="241" y="578" width="46.5" height="45.5"/>
+                            <rect key="frame" x="243" y="575" width="49" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="J1C-Cz-wfV" secondAttribute="height" multiplier="1:1" id="7dO-4S-WLk"/>
                             </constraints>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exclamationmark.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ojf-xZ-8O0">
-                            <rect key="frame" x="112.5" y="578" width="46.5" height="45.5"/>
+                            <rect key="frame" x="108" y="575" width="49" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="Ojf-xZ-8O0" secondAttribute="height" multiplier="1:1" id="Odz-rl-IfZ"/>
                             </constraints>
@@ -113,13 +114,13 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="uK9-G7-Ti8" secondAttribute="trailing" constant="16" id="3rt-cp-YUB"/>
-                        <constraint firstItem="qoF-e2-kgu" firstAttribute="top" secondItem="uK9-G7-Ti8" secondAttribute="bottom" constant="16" id="9Kj-aY-IlO"/>
+                        <constraint firstItem="qoF-e2-kgu" firstAttribute="top" secondItem="uK9-G7-Ti8" secondAttribute="bottom" constant="8" id="9Kj-aY-IlO"/>
                         <constraint firstAttribute="bottom" secondItem="Q8W-75-Vda" secondAttribute="bottom" constant="16" id="9wh-kf-zrY"/>
-                        <constraint firstItem="Q8W-75-Vda" firstAttribute="top" secondItem="FW8-mc-eXC" secondAttribute="bottom" constant="16" id="Cyy-8M-5K0"/>
+                        <constraint firstItem="Q8W-75-Vda" firstAttribute="top" secondItem="FW8-mc-eXC" secondAttribute="bottom" constant="8" id="Cyy-8M-5K0"/>
                         <constraint firstItem="Ojf-xZ-8O0" firstAttribute="centerY" secondItem="Q8W-75-Vda" secondAttribute="centerY" id="G1D-ZX-Fgm"/>
                         <constraint firstItem="Q8W-75-Vda" firstAttribute="centerX" secondItem="iz7-N0-Qu8" secondAttribute="centerX" id="GLW-OI-fiz"/>
                         <constraint firstItem="uK9-G7-Ti8" firstAttribute="top" secondItem="7Rg-id-lZD" secondAttribute="bottom" constant="16" id="Gqa-WW-HKb"/>
-                        <constraint firstItem="FW8-mc-eXC" firstAttribute="top" secondItem="qoF-e2-kgu" secondAttribute="bottom" constant="16" id="MEM-Kr-dJk"/>
+                        <constraint firstItem="FW8-mc-eXC" firstAttribute="top" secondItem="qoF-e2-kgu" secondAttribute="bottom" constant="8" id="MEM-Kr-dJk"/>
                         <constraint firstItem="qoF-e2-kgu" firstAttribute="centerX" secondItem="iz7-N0-Qu8" secondAttribute="centerX" id="RJl-7l-Mb5"/>
                         <constraint firstItem="Q8W-75-Vda" firstAttribute="leading" secondItem="Ojf-xZ-8O0" secondAttribute="trailing" constant="8" symbolic="YES" id="Zew-wh-hUS"/>
                         <constraint firstItem="qoF-e2-kgu" firstAttribute="leading" secondItem="iz7-N0-Qu8" secondAttribute="leading" constant="16" id="dqi-zF-rfT"/>
@@ -236,14 +237,14 @@
                 <constraint firstAttribute="trailing" secondItem="Bt3-3d-rUl" secondAttribute="trailing" constant="8" id="8cx-aG-B1S"/>
                 <constraint firstAttribute="trailing" secondItem="iz7-N0-Qu8" secondAttribute="trailing" id="AYM-82-mcV"/>
                 <constraint firstItem="Bt3-3d-rUl" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="NYL-Gd-wmz"/>
-                <constraint firstItem="Q8W-75-Vda" firstAttribute="height" secondItem="JbL-3d-P69" secondAttribute="height" multiplier="0.85" id="OCK-on-6xE"/>
+                <constraint firstItem="Q8W-75-Vda" firstAttribute="height" secondItem="JbL-3d-P69" secondAttribute="height" multiplier="0.9" id="OCK-on-6xE"/>
                 <constraint firstItem="7Rg-id-lZD" firstAttribute="centerX" secondItem="JbL-3d-P69" secondAttribute="centerX" id="T5m-nk-cz9"/>
                 <constraint firstItem="Bt3-3d-rUl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="f7A-Dk-wQl"/>
                 <constraint firstItem="7Rg-id-lZD" firstAttribute="top" secondItem="Rjf-95-T6c" secondAttribute="bottom" id="fVK-HS-4d3"/>
                 <constraint firstItem="iz7-N0-Qu8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="jOX-zT-26K"/>
                 <constraint firstAttribute="bottom" secondItem="iz7-N0-Qu8" secondAttribute="bottom" id="lXu-jm-rUL"/>
                 <constraint firstItem="7Rg-id-lZD" firstAttribute="height" secondItem="JbL-3d-P69" secondAttribute="height" multiplier="0.2" id="oGi-xL-qDS"/>
-                <constraint firstItem="Bt3-3d-rUl" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.2" id="qY3-JN-Egt"/>
+                <constraint firstItem="Bt3-3d-rUl" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.2" identifier="topContainer" id="qY3-JN-Egt"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="137.68115942028987" y="63.616071428571423"/>
@@ -254,6 +255,9 @@
             <size key="intrinsicContentSize" width="41.5" height="20.5"/>
         </designable>
         <designable name="Rjf-95-T6c">
+            <size key="intrinsicContentSize" width="41.5" height="20.5"/>
+        </designable>
+        <designable name="Sum-RL-ikc">
             <size key="intrinsicContentSize" width="41.5" height="20.5"/>
         </designable>
         <designable name="TiG-LB-54G">
