--- a/ThinkWhat/Modules/Controllers/App/Survey/List/Collection/SurveyCellContentView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Survey/List/Collection/SurveyCellContentView.xib
@@ -12,17 +12,18 @@
             <connections>
                 <outlet property="avatar" destination="8pF-U5-G1t" id="Oe1-jK-7Wl"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="Bxy-fg-DQi"/>
+                <outlet property="firstName" destination="n48-2N-oRL" id="75d-Ww-f0F"/>
                 <outlet property="height" destination="qDs-uB-7W8" id="u5T-zJ-7ST"/>
                 <outlet property="heightConstraint" destination="qDs-uB-7W8" id="JpI-lz-zS3"/>
                 <outlet property="hotIcon" destination="uPn-dI-0kl" id="TwJ-Nc-3qx"/>
                 <outlet property="hotIconWidth" destination="bjT-kX-xjD" id="hgE-Do-pto"/>
                 <outlet property="hotSpacer" destination="LNf-69-fZ0" id="V4i-UL-qWq"/>
+                <outlet property="lastName" destination="8dE-Z4-hmW" id="PxQ-yF-72M"/>
                 <outlet property="mark" destination="iJk-FY-YSO" id="DSB-2U-arr"/>
                 <outlet property="progress" destination="kr0-rB-vcq" id="cWj-y6-cyf"/>
                 <outlet property="titleLabel" destination="z87-Jc-9lp" id="OJq-pc-myc"/>
                 <outlet property="topicIcon" destination="rNY-MQ-PmU" id="kRs-vJ-SZX"/>
                 <outlet property="topicLabel" destination="5H6-Rz-zES" id="n8d-wx-ncl"/>
-                <outlet property="userCredentials" destination="n48-2N-oRL" id="75d-Ww-f0F"/>
                 <outlet property="viewsIcon" destination="dot-28-co8" id="9hl-6P-GSD"/>
                 <outlet property="viewsLabel" destination="fCT-Ke-0fd" id="Sn8-Yq-ln4"/>
                 <outlet property="votesLimitIcon" destination="mGN-PY-CXB" id="HLK-OO-JzD"/>
@@ -80,19 +81,12 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8pF-U5-G1t" customClass="Avatar" customModule="ThinkWhat" customModuleProvider="target">
-                            <rect key="frame" x="244" y="17.5" width="40" height="40"/>
+                            <rect key="frame" x="244" y="30" width="40" height="40"/>
                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="8pF-U5-G1t" secondAttribute="height" multiplier="1:1" id="5W4-Pg-TFr"/>
                             </constraints>
                         </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n48-2N-oRL">
-                            <rect key="frame" x="248.5" y="61.5" width="31" height="14.5"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iJk-FY-YSO">
                             <rect key="frame" x="84.5" y="16" width="15" height="15"/>
                             <constraints>
@@ -115,6 +109,29 @@
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AvD-2u-YZV">
                             <rect key="frame" x="105.5" y="16" width="15" height="15"/>
                         </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n48-2N-oRL" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
+                            <rect key="frame" x="232" y="18" width="64" height="64"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="n48-2N-oRL" secondAttribute="height" multiplier="1:1" id="1yO-5B-vpJ"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8dE-Z4-hmW" customClass="ArcLabel" customModule="ThinkWhat" customModuleProvider="target">
+                            <rect key="frame" x="232" y="18" width="64" height="64"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="boolean" keyPath="clockwise" value="NO"/>
+                                <userDefinedRuntimeAttribute type="number" keyPath="angle">
+                                    <real key="value" value="4.6699999999999999"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -130,13 +147,18 @@
                         <constraint firstItem="fCT-Ke-0fd" firstAttribute="centerY" secondItem="dot-28-co8" secondAttribute="centerY" id="BVX-xV-p8S"/>
                         <constraint firstItem="dot-28-co8" firstAttribute="leading" secondItem="bmT-6M-XRW" secondAttribute="trailing" constant="4" id="DVQ-ed-JZi"/>
                         <constraint firstItem="iJk-FY-YSO" firstAttribute="height" secondItem="rNY-MQ-PmU" secondAttribute="height" id="EdW-Oa-Hdy"/>
+                        <constraint firstItem="8dE-Z4-hmW" firstAttribute="centerY" secondItem="8pF-U5-G1t" secondAttribute="centerY" id="GMf-0a-Jbn"/>
                         <constraint firstItem="iJk-FY-YSO" firstAttribute="leading" secondItem="5H6-Rz-zES" secondAttribute="trailing" constant="4" id="Iz1-Fh-982"/>
                         <constraint firstAttribute="bottom" secondItem="mGN-PY-CXB" secondAttribute="bottom" constant="16" id="KPQ-J7-krB"/>
                         <constraint firstItem="z87-Jc-9lp" firstAttribute="leading" secondItem="uPn-dI-0kl" secondAttribute="trailing" constant="4" id="LNf-69-fZ0"/>
                         <constraint firstItem="kr0-rB-vcq" firstAttribute="centerY" secondItem="rNY-MQ-PmU" secondAttribute="centerY" id="Oih-4O-fPr"/>
+                        <constraint firstItem="n48-2N-oRL" firstAttribute="width" secondItem="8pF-U5-G1t" secondAttribute="width" multiplier="1.6" id="P2a-Zr-jGw"/>
+                        <constraint firstItem="8dE-Z4-hmW" firstAttribute="width" secondItem="n48-2N-oRL" secondAttribute="width" id="RSX-gX-aNa"/>
                         <constraint firstItem="kr0-rB-vcq" firstAttribute="centerX" secondItem="rNY-MQ-PmU" secondAttribute="centerX" id="SCr-Rc-FKg"/>
                         <constraint firstItem="bmT-6M-XRW" firstAttribute="leading" secondItem="mGN-PY-CXB" secondAttribute="trailing" constant="2" id="SLq-hb-1oI"/>
+                        <constraint firstItem="n48-2N-oRL" firstAttribute="centerY" secondItem="8pF-U5-G1t" secondAttribute="centerY" id="Tei-2O-Cd5"/>
                         <constraint firstItem="rNY-MQ-PmU" firstAttribute="top" secondItem="dO2-xq-BxN" secondAttribute="top" constant="16" id="U5m-sw-Lzf"/>
+                        <constraint firstItem="8dE-Z4-hmW" firstAttribute="centerX" secondItem="8pF-U5-G1t" secondAttribute="centerX" id="UGT-8k-yjI"/>
                         <constraint firstAttribute="trailing" secondItem="8pF-U5-G1t" secondAttribute="trailing" constant="16" id="UmO-rD-mys"/>
                         <constraint firstItem="8pF-U5-G1t" firstAttribute="height" secondItem="dO2-xq-BxN" secondAttribute="height" multiplier="0.4" id="X5w-lY-DXd"/>
                         <constraint firstItem="8pF-U5-G1t" firstAttribute="leading" secondItem="z87-Jc-9lp" secondAttribute="trailing" priority="999" constant="8" id="aIV-ph-0Zo"/>
@@ -147,6 +169,7 @@
                         <constraint firstItem="mGN-PY-CXB" firstAttribute="leading" secondItem="dO2-xq-BxN" secondAttribute="leading" constant="16" id="fY0-2Q-fWy"/>
                         <constraint firstItem="kr0-rB-vcq" firstAttribute="width" secondItem="kr0-rB-vcq" secondAttribute="height" multiplier="1:1" id="fo0-jU-UuL"/>
                         <constraint firstItem="mGN-PY-CXB" firstAttribute="width" secondItem="mGN-PY-CXB" secondAttribute="height" multiplier="1:1" id="gE3-l7-g01"/>
+                        <constraint firstItem="8dE-Z4-hmW" firstAttribute="width" secondItem="8dE-Z4-hmW" secondAttribute="height" multiplier="1:1" id="gzE-nD-GMR"/>
                         <constraint firstItem="5H6-Rz-zES" firstAttribute="centerY" secondItem="rNY-MQ-PmU" secondAttribute="centerY" id="hBl-4u-xSn"/>
                         <constraint firstItem="mGN-PY-CXB" firstAttribute="height" secondItem="rNY-MQ-PmU" secondAttribute="height" multiplier="0.9" id="iJj-J1-Tx9"/>
                         <constraint firstItem="n48-2N-oRL" firstAttribute="centerX" secondItem="8pF-U5-G1t" secondAttribute="centerX" id="jaf-oj-fY7"/>
@@ -156,9 +179,8 @@
                         <constraint firstItem="z87-Jc-9lp" firstAttribute="centerY" secondItem="dO2-xq-BxN" secondAttribute="centerY" id="rk0-uq-fYu"/>
                         <constraint firstItem="dot-28-co8" firstAttribute="width" secondItem="dot-28-co8" secondAttribute="height" multiplier="1:1" id="sVI-c1-bk0"/>
                         <constraint firstItem="kr0-rB-vcq" firstAttribute="height" secondItem="rNY-MQ-PmU" secondAttribute="height" multiplier="1.75" id="ssP-vr-TcW"/>
-                        <constraint firstItem="n48-2N-oRL" firstAttribute="top" secondItem="8pF-U5-G1t" secondAttribute="bottom" constant="4" id="uzV-G6-4hP"/>
                         <constraint firstItem="rNY-MQ-PmU" firstAttribute="height" secondItem="dO2-xq-BxN" secondAttribute="height" multiplier="0.15" id="v6g-Rh-2gk"/>
-                        <constraint firstItem="8pF-U5-G1t" firstAttribute="centerY" secondItem="dO2-xq-BxN" secondAttribute="centerY" multiplier="0.75" id="xQY-Je-2Wz"/>
+                        <constraint firstItem="8pF-U5-G1t" firstAttribute="centerY" secondItem="dO2-xq-BxN" secondAttribute="centerY" id="xQY-Je-2Wz"/>
                     </constraints>
                 </view>
             </subviews>
@@ -173,6 +195,11 @@
             <point key="canvasLocation" x="137.68115942028987" y="85.714285714285708"/>
         </view>
     </objects>
+    <designables>
+        <designable name="8dE-Z4-hmW">
+            <size key="intrinsicContentSize" width="31" height="14.5"/>
+        </designable>
+    </designables>
     <resources>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
